src/app/primary-navbar/primary-navbar.component.css
nav {
	background-color: #3498db;
	border-bottom: 4px solid black;
	border-top: 1px solid black;
    font-family: 'Hind Madurai';
    height: 50px;
}

.navbar-brand-mobile {
	padding: 0px;
	margin-left: 25%;
	width: 50% !important;
}

.mobile-logo-wrapper {
	width: 100%;
}

.navbar-brand {
	width: 100%;
	padding: 0px;
	margin-top: 50px;
}

.navbar-brand img {
	width: 100%;
	max-width: 180px;
	display: block;
	margin: 0 auto;
}

.nav-brand-wrapper {
	width: 33.3%;
}

.navbar {
	padding: 10px;
}

ul.navbar-nav {
	width: 100%;
}

.nav-item {
	width: 50%;
	text-align: center;
	font-size: 20px;
}

.nav-link {
	color: white !important;
	font-size: 15px;
	text-transform: capitalize;
}

.nav-items {
	width: 33.3%;
}

.nav-items-wrapper {
	width: 100%;
}

.active .nav-link{
	color: #FFE28D !important;
}

@media (max-width: 767px) {
 	.nav-item {
 		width: 100%;
 	}

 	nav {
 		height: auto;
 	}

 	.navbar-brand {
 		margin-top: 0px;
 	}

 	.navbar {
 		min-height: 81px;
 	}
}

@media (max-width: 310px) {
	.navbar-brand-mobile {
		margin-left: 0px;
}

}

